Add new options for error types in select dropdown

--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
             <option>Mellem</option>
             <option>Høj</option>
             <option>Kritisk</option>
+            <option>Nærved</option>
+            <option>Ulykke</option>
           </select>
         </div>
         <div class="field">
